objects/LoyaltyPPInfo__c.object
<CustomObject>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <description>Account Priority:  Pardot, High, Medium or Low</description>
        <label>Account Tier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_SubType__c</fullName>
        <label>Classification SubType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Type__c</fullName>
        <label>Classification Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <formula>Event__r.Event_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Loyalty_PPInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KBIS</fullName>
                </value>
                <value>
                    <fullName>MedTrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExhibitorRetention__c</fullName>
        <label>Exhibitor Retention</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exhibitor_Classification__c</fullName>
        <formula>IF(ISBLANK( Classification_Type__c ), "" ,
IF(ISNULL( Classification_Type__c), "" ,
IF(ISBLANK( Classification_SubType__c ), Classification_Type__c , 
IF(CONTAINS (Classification_SubType__c, Classification_Type__c)  , Classification_Type__c ,
Classification_Type__c + '-' + Classification_SubType__c 
))))</formula>
        <label>Exhibitor Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoyaltyAccount__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Loyalty_PPInfo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loyalty_Ladder__c</fullName>
        <label>Loyalty Ladder</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Points__c</fullName>
        <label>Priority Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Score and Priority Point</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Loyalty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores and Priority Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>